--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -43,54 +43,3 @@ main {
     border: 2px solid rgb(0, 0, 0);
 }
 
-.city-btn {
-  /* position: fixed; */
-  background: none;
-  border: none;
-  text-decoration: none;
-  font-family: inherit;
-  font-size: inherit;
-  cursor: pointer;
-  /* padding: 1rem;
-  z-index: 1; */
-}
-
-.city-btn:hover {
-  color: rgb(39, 37, 36);
-}
-
-.city-select {
-  position: relative;
-  /* display: flex;
-  justify-content: flex-start; */
-  /* margin-right: 60rem;
-  margin-top: 30px; */
-  height: 48px;
-  width: 270px;
-  max-height: 310px;
-  overflow: unset;
-  z-index: 1;
-}
-
-.dropdown-city {
-  position: absolute;
-  left: 0;
-  top: calc(100% + 0.25rem);
-  background-color: white;
-  padding: 0.75rem;
-  border-radius: 0.45rem;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.21);
-  opacity: 0;
-  transform: translateY(-10px);
-  transition: 150ms ease-in-out, transform 150ms ease-in-out;
-  /* Here we're applying the transition on the Opacity property */
-
-  height: 300px;
-  overflow-y: auto;
-  z-index: 1;
-}
-
-.city-select > .btnn:focus + .dropdown-city {
-  /* opacity: 1; */
-  transform: translateY(0);
-}
